--- a/first-webpage/index.html
+++ b/first-webpage/index.html
@@ -1,2 +1,11 @@
+<head>
+  <title>Ning Zhang's Portofolio</title>
+</head>
+<body>
 <h1>Welcome to my page!</h1>
 <p>My name is Ning Zhang.</p>
+<p>
+    This is normal text in the paragraph. 
+    Also, we want to say this is <strong>important text</strong>.
+  </p>
+</body>
