--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="css/main.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction of Ning Zhang</title>
@@ -12,13 +13,13 @@
             <li><A href="notes.html">HTML Study Notes</A></li>
         </ul>
     </nav>
-    <header><h1>Ning Zhang</h1></header>
+    <header><h1 class="site-title">Ning Zhang</h1></header>
     <article>
         <h1>About Me</h1>
-        <img src="images/ning_zhang_portrait.jpg" alt="A Portrait of Ning Zhang" width="300">
+        <img src="images/ning_zhang_portrait.jpg" alt="A Portrait of Ning Zhang" width="300" id="my-image">
         <p>My name is Ning Zhang. In Chinese culture, we place our surnames before our given names, so you can call me Zhang Ning (<em>ZHANG</em> is my surname).I was born and raised in China, and this is the first time I am studying abroad. <br>My program is <abbr title="Interactive Media Design">IMD</abbr>, but this is not my first post-secondary education. I obtained my Master's degree in Mechanical Engineering about ten years ago. But unlike most of my peers, I did not become an engineer. Instead, I have worked as a patent agent and legal consultant in the patent field before deciding to study in Canada.</p>
         <p>The two main hobbies in my life are:</p>
-        <ul>
+        <ul class="hobbies-list">
             <li>photography</li>
             <li>rock music </li>
         </ul>
