--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="css/main.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Study Notes</title>
@@ -12,7 +13,7 @@
             <li><A href="notes.html">HTML Study Notes</A></li>
         </ul>
     </nav>
-    <header><h1>HTML Study Notes</h1></header>
+    <header><h1 class="site-title">HTML Study Notes</h1></header>
     <section>
         <h2>HTML Tags</h2>
         <dl>
