modify text content and notes

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <!-- Header Section -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="images/logo.png" alt="Three Star Media Logo">
@@ -27,37 +27,37 @@
         </div>
     </header>
     
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
+    <!-- Main Banner -->
+    <section class="main-banner">
+        <div class="main-banner-content">
             <img src="images/main-banner.jpg" alt="Main Banner">
             <h1>Welcome to Three Star Media</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magnam rerum voluptas necessitatibus, quam nostrum animi maxime?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est reiciendis aspernatur commodi? Saepe quos ut accusantium aliquid impedit quaerat excepturi nemo delectus dolorem nobis sunt fuga autem, eligendi voluptates sint.</p>
             <button>Connect with us</button>
         </div>
     </section>
 
-    <!-- About Us Section -->
+    <!-- About Us -->
     <section class="about-us">
         <h2>About Us</h2>
         <div class="about-us-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem aspernatur...</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum aspernatur perspiciatis obcaecati quasi inventore sapiente id facilis omnis iure. Amet sed nihil quasi provident. Culpa expedita facilis dolor iste? Praesentium.</p>
             <img src="images/about-us.jpg" alt="About Us Image">
         </div>
     </section>
 
-    <!-- Our Services Section -->
+    <!-- Our Services -->
     <section class="services">
         <h2>Our Services</h2>
         <div class="service-item">
             <h3>Digital Transformation</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique officiis blanditiis qui odio mollitia nesciunt! Vitae et quam, dolores eos ex maiores assumenda obcaecati tenetur commodi debitis, aperiam tempore ducimus?</p>
             <img src="images/digital.jpg" alt="Digital Transformation">
             <button>Digital Plans</button>
         </div>
         <div class="service-item">
             <h3>Marketing</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas quasi expedita quae magnam optio officia incidunt maiores aspernatur, quibusdam cupiditate, accusantium, asperiores officiis porro accusamus quidem nesciunt animi. Eligendi, expedita?</p>
             <img src="images/marketing.jpg" alt="Marketing">
             <button>Marketing Plans</button>
         </div>
@@ -69,27 +69,27 @@
         </div>
         <div class="service-item">
             <h3>Web Development</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta a corrupti recusandae, nemo provident reiciendis excepturi voluptatibus? Mollitia ipsa obcaecati quibusdam omnis adipisci id tempora perferendis voluptatibus dolore amet! Quia.</p>
             <img src="images/web.jpg" alt="Web Development">
             <button>Web Plans</button>
         </div>
         <div class="service-item">
             <h3>Print</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint excepturi, dolore dolores ea accusamus, consequuntur illo accusantium molestiae numquam voluptatem repellendus. Excepturi ullam corporis laboriosam unde laudantium dolorem consectetur voluptates.</p>
             <img src="images/print.jpg" alt="Print">
             <button>Print Plans</button>
         </div>
     </section>
 
-    <!-- Our Vision Section -->
+    <!-- Our Vision -->
     <section class="vision">
         <h2>Our Vision</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam sequi facere rerum reprehenderit ducimus ipsa nostrum sint repellendus numquam aperiam, quas doloribus officia cumque dignissimos asperiores voluptates eum magni enim!</p>
         <img src="images/vision.jpg" alt="Our Vision">
         <button>Learn More</button>
     </section>
 
-    <!-- Our Team Section -->
+    <!-- Our Team -->
     <section class="team">
         <h2>Our Team</h2>
         <div class="team-member">
@@ -97,7 +97,7 @@
             <div class="member-info">
                 <h3>John Doe</h3>
                 <p>CEO and Co-owner</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, ratione mollitia, similique minus earum numquam enim excepturi, a ipsum accusantium neque placeat. Quibusdam perspiciatis illum dolore laudantium nisi odio! Facere.</p>
             </div>
         </div>
         <div class="team-member">
@@ -105,19 +105,19 @@
             <div class="member-info">
                 <h3>Bob Rite</h3>
                 <p>CFO and Co-owner</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestiae iusto ad et voluptas tempora suscipit facere voluptatem beatae similique possimus, deserunt, repellat sit, minima ea. Unde dolore quos debitis.</p>
             </div>
         </div>
         <div class="team-member">
             <img src="images/john.jpg" alt="John Doe">
             <div class="member-info">
                 <h3>John Doe</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quidem tempora nobis! Sed sunt nostrum nisi explicabo voluptates ipsam similique veniam dignissimos? Quas quibusdam quam facilis quae vel? Porro, exercitationem?</p>
             </div>
         </div>
     </section>
 
-    <!-- Contact Us Section -->
+    <!-- Contact Us -->
     <section class="contact">
         <h2>Contact Us</h2>
         <div class="contact-form">
@@ -154,7 +154,7 @@
         </div>
     </section>
 
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer>
         <p>&copy; Copyright Three Star Media, 2020</p>
         <p>All images are taken from Unsplash</p>
