--- a/final-project/index.html
+++ b/final-project/index.html
@@ -136,7 +136,7 @@
         </div>
         <div class="location">
             <h3>Location</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5607.914741718904!2d-75.76088505341886!3d45.34967278428896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salgonquin%20college!5e0!3m2!1sen!2sca!4v1722435601951!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5607.914741718904!2d-75.76088505341886!3d45.34967278428896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salgonquin%20college!5e0!3m2!1sen!2sca!4v1722435601951!5m2!1sen!2sca"></iframe>
         </div>
         
         <div class="hours">
